Changed Nav Bar Active Color
Changed the navigation bar active color to light-grey instead of gold to make the website look better.

--- a/css/style.css
+++ b/css/style.css
@@ -44,5 +44,5 @@
 }
 
 .active {
-    background-color: gold; /* Add an active/current color */
+    background-color: lightgrey; /* Add an active/current color */
 }
