--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 }
 
 .content {
-    height: 1000px;
+    height: 1300px;
     background: gold;
 }
 
@@ -66,3 +66,45 @@
 .book-info {
     background-color: white;
 }
+
+.checkoutButton {
+    background-color:#F6F6F6;
+    -moz-border-radius:28px;
+    -webkit-border-radius:28px;
+    border-radius:28px;
+    border:1px solid #101010;
+    display:inline-block;
+    cursor:pointer;
+    color:#050005;
+    font-family:Arial;
+    font-size:17px;
+    padding:16px 31px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #946b94;
+    position: relative;
+    margin-top: 63%;
+    left:10%;
+
+}
+.checkoutButton:hover {
+    background-color:#11C83C;
+}
+.checkoutButton:active {
+    position:relative;
+    top:1px;
+}
+
+.paymentInfo{
+    position: absolute;
+    margin-top: ;
+    font-size: 24px;
+    l
+}
+
+.shipping{
+    position: absolute;
+    margin-top: 45%;
+    font-size: 24px;
+}
+
+
